--- a/Capstone_Wrangling.ipynb
+++ b/Capstone_Wrangling.ipynb
@@ -283,17 +283,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = data.filter(regex = '11$', axis =1)\n",
+    "df1 = data.filter(regex = 'sample|11$', axis =1)\n",
     "# Creating new dataframe with only columns containing expression values for normal cells"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -317,6 +317,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>sample</th>\n",
        "      <th>TCGA-CJ-5677-11</th>\n",
        "      <th>TCGA-B0-5696-11</th>\n",
        "      <th>TCGA-CJ-5679-11</th>\n",
@@ -326,7 +327,6 @@
        "      <th>TCGA-B0-5701-11</th>\n",
        "      <th>TCGA-CZ-5461-11</th>\n",
        "      <th>TCGA-B0-5690-11</th>\n",
-       "      <th>TCGA-CZ-5468-11</th>\n",
        "      <th>...</th>\n",
        "      <th>TCGA-CW-5580-11</th>\n",
        "      <th>TCGA-B8-5552-11</th>\n",
@@ -343,6 +343,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>ARHGEF10L</td>\n",
        "      <td>10.8969</td>\n",
        "      <td>11.1427</td>\n",
        "      <td>10.3362</td>\n",
@@ -352,7 +353,6 @@
        "      <td>10.6772</td>\n",
        "      <td>10.5352</td>\n",
        "      <td>10.9610</td>\n",
-       "      <td>10.8893</td>\n",
        "      <td>...</td>\n",
        "      <td>10.8603</td>\n",
        "      <td>9.4288</td>\n",
@@ -367,6 +367,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>HIF3A</td>\n",
        "      <td>6.4943</td>\n",
        "      <td>5.9789</td>\n",
        "      <td>6.0228</td>\n",
@@ -376,7 +377,6 @@
        "      <td>8.6367</td>\n",
        "      <td>4.9484</td>\n",
        "      <td>7.1702</td>\n",
-       "      <td>7.2163</td>\n",
        "      <td>...</td>\n",
        "      <td>8.3424</td>\n",
        "      <td>5.5908</td>\n",
@@ -391,6 +391,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>RNF17</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>0.0000</td>\n",
@@ -400,7 +401,6 @@
        "      <td>0.0000</td>\n",
        "      <td>0.5994</td>\n",
        "      <td>2.2604</td>\n",
-       "      <td>0.0000</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>0.0000</td>\n",
@@ -415,6 +415,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>RNF10</td>\n",
        "      <td>12.2130</td>\n",
        "      <td>12.3946</td>\n",
        "      <td>12.3002</td>\n",
@@ -424,7 +425,6 @@
        "      <td>12.1640</td>\n",
        "      <td>12.2868</td>\n",
        "      <td>12.2738</td>\n",
-       "      <td>12.2829</td>\n",
        "      <td>...</td>\n",
        "      <td>12.4214</td>\n",
        "      <td>11.3729</td>\n",
@@ -439,6 +439,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>RNF11</td>\n",
        "      <td>11.8248</td>\n",
        "      <td>11.7217</td>\n",
        "      <td>12.0602</td>\n",
@@ -448,7 +449,6 @@
        "      <td>11.5128</td>\n",
        "      <td>11.9681</td>\n",
        "      <td>11.5019</td>\n",
-       "      <td>11.7200</td>\n",
        "      <td>...</td>\n",
        "      <td>11.6284</td>\n",
        "      <td>12.6320</td>\n",
@@ -463,30 +463,30 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 72 columns</p>\n",
+       "<p>5 rows × 73 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   TCGA-CJ-5677-11  TCGA-B0-5696-11  TCGA-CJ-5679-11  TCGA-CZ-5452-11  \\\n",
-       "0          10.8969          11.1427          10.3362          10.9979   \n",
-       "1           6.4943           5.9789           6.0228           7.8769   \n",
+       "      sample  TCGA-CJ-5677-11  TCGA-B0-5696-11  TCGA-CJ-5679-11  \\\n",
+       "0  ARHGEF10L          10.8969          11.1427          10.3362   \n",
+       "1      HIF3A           6.4943           5.9789           6.0228   \n",
+       "2      RNF17           0.0000           0.0000           0.0000   \n",
+       "3      RNF10          12.2130          12.3946          12.3002   \n",
+       "4      RNF11          11.8248          11.7217          12.0602   \n",
+       "\n",
+       "   TCGA-CZ-5452-11  TCGA-B0-5712-11  TCGA-CW-5584-11  TCGA-B0-5701-11  \\\n",
+       "0          10.9979          10.6467          10.6163          10.6772   \n",
+       "1           7.8769           8.5452           5.1819           8.6367   \n",
        "2           0.0000           0.0000           0.0000           0.0000   \n",
-       "3          12.2130          12.3946          12.3002          12.4976   \n",
-       "4          11.8248          11.7217          12.0602          11.6335   \n",
+       "3          12.4976          12.1206          12.1293          12.1640   \n",
+       "4          11.6335          11.8102          11.6994          11.5128   \n",
        "\n",
-       "   TCGA-B0-5712-11  TCGA-CW-5584-11  TCGA-B0-5701-11  TCGA-CZ-5461-11  \\\n",
-       "0          10.6467          10.6163          10.6772          10.5352   \n",
-       "1           8.5452           5.1819           8.6367           4.9484   \n",
-       "2           0.0000           0.0000           0.0000           0.5994   \n",
-       "3          12.1206          12.1293          12.1640          12.2868   \n",
-       "4          11.8102          11.6994          11.5128          11.9681   \n",
-       "\n",
-       "   TCGA-B0-5690-11  TCGA-CZ-5468-11       ...         TCGA-CW-5580-11  \\\n",
-       "0          10.9610          10.8893       ...                 10.8603   \n",
-       "1           7.1702           7.2163       ...                  8.3424   \n",
-       "2           2.2604           0.0000       ...                  0.0000   \n",
-       "3          12.2738          12.2829       ...                 12.4214   \n",
-       "4          11.5019          11.7200       ...                 11.6284   \n",
+       "   TCGA-CZ-5461-11  TCGA-B0-5690-11       ...         TCGA-CW-5580-11  \\\n",
+       "0          10.5352          10.9610       ...                 10.8603   \n",
+       "1           4.9484           7.1702       ...                  8.3424   \n",
+       "2           0.5994           2.2604       ...                  0.0000   \n",
+       "3          12.2868          12.2738       ...                 12.4214   \n",
+       "4          11.9681          11.5019       ...                 11.6284   \n",
        "\n",
        "   TCGA-B8-5552-11  TCGA-CZ-4865-11  TCGA-CZ-4863-11  TCGA-B2-5636-11  \\\n",
        "0           9.4288          10.3868          10.2874          10.9476   \n",
@@ -509,10 +509,10 @@
        "3          12.2514  \n",
        "4          11.7847  \n",
        "\n",
-       "[5 rows x 72 columns]"
+       "[5 rows x 73 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,17 +523,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2 = data.filter(regex = '01|05$', axis = 1)\n",
+    "df2 = data.filter(regex = 'sample|01|05$', axis = 1)\n",
     "# Creating new dataframe with only columns containing expression values for cancer cells"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -557,6 +557,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>sample</th>\n",
        "      <th>TCGA-BP-4162-01</th>\n",
        "      <th>TCGA-DV-5566-01</th>\n",
        "      <th>TCGA-BP-5191-01</th>\n",
@@ -566,7 +567,6 @@
        "      <th>TCGA-BP-4762-01</th>\n",
        "      <th>TCGA-BP-4158-01</th>\n",
        "      <th>TCGA-CJ-4887-01</th>\n",
-       "      <th>TCGA-B2-4098-01</th>\n",
        "      <th>...</th>\n",
        "      <th>TCGA-B0-5104-01</th>\n",
        "      <th>TCGA-A3-3313-01</th>\n",
@@ -583,6 +583,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>ARHGEF10L</td>\n",
        "      <td>10.5030</td>\n",
        "      <td>10.7612</td>\n",
        "      <td>10.2063</td>\n",
@@ -592,7 +593,6 @@
        "      <td>9.9150</td>\n",
        "      <td>10.7621</td>\n",
        "      <td>10.5819</td>\n",
-       "      <td>9.9260</td>\n",
        "      <td>...</td>\n",
        "      <td>10.5586</td>\n",
        "      <td>9.5556</td>\n",
@@ -607,6 +607,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>HIF3A</td>\n",
        "      <td>5.5283</td>\n",
        "      <td>5.7842</td>\n",
        "      <td>5.0063</td>\n",
@@ -616,7 +617,6 @@
        "      <td>3.7802</td>\n",
        "      <td>7.2039</td>\n",
        "      <td>6.1342</td>\n",
-       "      <td>1.9065</td>\n",
        "      <td>...</td>\n",
        "      <td>6.2061</td>\n",
        "      <td>4.8253</td>\n",
@@ -631,12 +631,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>RNF17</td>\n",
        "      <td>3.8036</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>0.3386</td>\n",
-       "      <td>0.0000</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>0.0000</td>\n",
@@ -655,6 +655,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>RNF10</td>\n",
        "      <td>11.4379</td>\n",
        "      <td>11.5478</td>\n",
        "      <td>12.3439</td>\n",
@@ -664,7 +665,6 @@
        "      <td>11.3734</td>\n",
        "      <td>11.3251</td>\n",
        "      <td>11.7681</td>\n",
-       "      <td>11.7520</td>\n",
        "      <td>...</td>\n",
        "      <td>11.7338</td>\n",
        "      <td>11.7709</td>\n",
@@ -679,6 +679,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>RNF11</td>\n",
        "      <td>11.4180</td>\n",
        "      <td>11.3190</td>\n",
        "      <td>10.3413</td>\n",
@@ -688,7 +689,6 @@
        "      <td>12.2329</td>\n",
        "      <td>11.2993</td>\n",
        "      <td>10.8723</td>\n",
-       "      <td>10.4091</td>\n",
        "      <td>...</td>\n",
        "      <td>11.7629</td>\n",
        "      <td>10.2373</td>\n",
@@ -703,30 +703,30 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 535 columns</p>\n",
+       "<p>5 rows × 536 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   TCGA-BP-4162-01  TCGA-DV-5566-01  TCGA-BP-5191-01  TCGA-BP-5200-01  \\\n",
-       "0          10.5030          10.7612          10.2063          10.0616   \n",
-       "1           5.5283           5.7842           5.0063           5.3326   \n",
-       "2           3.8036           0.0000           0.0000           0.0000   \n",
-       "3          11.4379          11.5478          12.3439          11.5149   \n",
-       "4          11.4180          11.3190          10.3413          11.2923   \n",
+       "      sample  TCGA-BP-4162-01  TCGA-DV-5566-01  TCGA-BP-5191-01  \\\n",
+       "0  ARHGEF10L          10.5030          10.7612          10.2063   \n",
+       "1      HIF3A           5.5283           5.7842           5.0063   \n",
+       "2      RNF17           3.8036           0.0000           0.0000   \n",
+       "3      RNF10          11.4379          11.5478          12.3439   \n",
+       "4      RNF11          11.4180          11.3190          10.3413   \n",
        "\n",
-       "   TCGA-BP-4347-01  TCGA-BP-4770-01  TCGA-BP-4762-01  TCGA-BP-4158-01  \\\n",
-       "0          10.0193           8.4364           9.9150          10.7621   \n",
-       "1           7.6102           6.0422           3.7802           7.2039   \n",
-       "2           0.3386           0.0000           0.0000           0.0000   \n",
-       "3          11.4065          12.1963          11.3734          11.3251   \n",
-       "4          10.9971          11.8936          12.2329          11.2993   \n",
+       "   TCGA-BP-5200-01  TCGA-BP-4347-01  TCGA-BP-4770-01  TCGA-BP-4762-01  \\\n",
+       "0          10.0616          10.0193           8.4364           9.9150   \n",
+       "1           5.3326           7.6102           6.0422           3.7802   \n",
+       "2           0.0000           0.3386           0.0000           0.0000   \n",
+       "3          11.5149          11.4065          12.1963          11.3734   \n",
+       "4          11.2923          10.9971          11.8936          12.2329   \n",
        "\n",
-       "   TCGA-CJ-4887-01  TCGA-B2-4098-01       ...         TCGA-B0-5104-01  \\\n",
-       "0          10.5819           9.9260       ...                 10.5586   \n",
-       "1           6.1342           1.9065       ...                  6.2061   \n",
+       "   TCGA-BP-4158-01  TCGA-CJ-4887-01       ...         TCGA-B0-5104-01  \\\n",
+       "0          10.7621          10.5819       ...                 10.5586   \n",
+       "1           7.2039           6.1342       ...                  6.2061   \n",
        "2           0.0000           0.0000       ...                  0.0000   \n",
-       "3          11.7681          11.7520       ...                 11.7338   \n",
-       "4          10.8723          10.4091       ...                 11.7629   \n",
+       "3          11.3251          11.7681       ...                 11.7338   \n",
+       "4          11.2993          10.8723       ...                 11.7629   \n",
        "\n",
        "   TCGA-A3-3313-01  TCGA-B2-5633-01  TCGA-CJ-4872-01  TCGA-CJ-5684-01  \\\n",
        "0           9.5556          10.2652           9.4981          10.2751   \n",
@@ -749,10 +749,10 @@
        "3          11.3489  \n",
        "4          11.5469  \n",
        "\n",
-       "[5 rows x 535 columns]"
+       "[5 rows x 536 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
