--- a/Capstone_Wrangling.ipynb
+++ b/Capstone_Wrangling.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
@@ -22,13 +22,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current working directory C:\\Users\\Frank\n"
+      "Current working directory c:\\users\\frank\\desktop\\python_springboard\\datasets\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "import os\n",
+    "import numpy as np\n",
     "print(\"Current working directory\" , os.getcwd()) # print out current working directory"
    ]
   },
@@ -759,6 +760,91 @@
    ],
    "source": [
     "df2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# while pandas dataframes are generally compatible with most data analysis operations, numpy arrays are the \n",
+    "# preferential format for some machine learning operations. This code transforms df1 (pandas dataframe with \n",
+    "# normal cell expression values) into a numpy array. The array is expressed as tuples with the gene name as the key.\n",
+    "data_array1 = df1.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['ARHGEF10L', 10.8969, 11.1427, ..., 10.3262, 10.4025, 10.9598],\n",
+       "       ['HIF3A', 6.4943, 5.9789, ..., 6.9556, 5.5893, 6.8364],\n",
+       "       ['RNF17', 0.0, 0.0, ..., 0.0, 0.0, 1.4795],\n",
+       "       ...,\n",
+       "       ['GSTK1', 11.6819, 11.8056, ..., 11.5879, 11.505, 11.9865],\n",
+       "       ['SELP', 7.9269, 8.4468, ..., 9.6062, 9.5782, 8.4154],\n",
+       "       ['SELS', 9.6189, 9.2858, ..., 9.6687, 9.673, 9.5737]], dtype=object)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_array1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this code transforms df2 (pandas dataframe with cancer cell expression values) into a numpy array (as above).\n",
+    "data_array2 = df2.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['ARHGEF10L', 10.503, 10.7612, ..., 10.8817, 10.1949, 10.3294],\n",
+       "       ['HIF3A', 5.5283, 5.7842, ..., 7.8293, 6.1788, 6.2293],\n",
+       "       ['RNF17', 3.8036, 0.0, ..., 0.0, 0.6128, 0.0],\n",
+       "       ...,\n",
+       "       ['GSTK1', 11.6227, 11.8431, ..., 12.6813, 11.5499, 11.7339],\n",
+       "       ['SELP', 7.0732, 6.5214, ..., 7.1322, 8.1205, 7.3263],\n",
+       "       ['SELS', 9.6363, 9.8619, ..., 9.8824, 9.6616, 9.3725]],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_array2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# because the original dataset is log2 transformed and normalized, there is a reduced need to preprocess the data.\n",
+    "# outlier patient samples (columns) will be addressed later."
    ]
   },
   {
