--- a/Capstone_Wrangling.ipynb
+++ b/Capstone_Wrangling.ipynb
@@ -1811,7 +1811,7 @@
    "source": [
     "### Concantinate the two dataframes\n",
     "\n",
-    "The two datasets, one representing cancer cell gene expression values, and other the same for normal cells, \n",
+    "The two datasets, one representing cancer cell gene expression values, and the other representing the same for normal cells, \n",
     "are concantinated, generating a single dataset with gene expression values grouped by type (i.e. cancer or normal).\n",
     "This allows for truncating the dataset to include only genes with expression values which are common to both dataframes.\n"
    ]
