--- a/Capstone_Wrangling.ipynb
+++ b/Capstone_Wrangling.ipynb
@@ -4332,7 +4332,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### See if the dataset can be reasonably truncated via dimension reduction\n"
+    "### Explore variability of dataset via PCA\n"
    ]
   },
   {
@@ -4364,9 +4364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As shown, the first two components explain ~30% of the variance. While this is typically far below \n",
-    "the desired threshold (>= .85), given the size of the dataset, it may be necessary to confine \n",
-    "the analysis to only the first two components."
+    "As shown, the first two components explain ~30% of the variance."
    ]
   },
   {
