--- a/Capstone_Wrangling.ipynb
+++ b/Capstone_Wrangling.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "[5 rows x 607 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
        "[5 rows x 73 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -628,7 +628,7 @@
        "Length: 72, dtype: float64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -720,21 +720,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generate boxplots to confirm normality of dataset and output descriptions and shape"
+    "### Generate boxplots to confirm normality of df1 and output descriptions and shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x28a113f8320>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1dce32fb320>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +782,7 @@
        "(15499, 73)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,8 +793,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create df2 and print out head, shape, mean, description, and boxplot"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +820,7 @@
        "(20530, 536)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1247,8 +1254,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Filter out rows with zero values"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1257,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1266,7 +1280,7 @@
        "(12619, 536)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1278,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1527,7 +1541,7 @@
        "[5 rows x 72 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1799,26 +1813,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Concantinate the two dataframes\n",
     "\n",
-    "The two datasets, one representing cancer cell gene expression values, and the other representing the same for normal cells, \n",
+    "The two datasets, one representing cancer cell gene expression values and the other representing the same for normal cells, \n",
     "are concantinated, generating a single dataset with gene expression values grouped by type (i.e. cancer or normal).\n",
     "This allows for truncating the dataset to include only genes with expression values which are common to both dataframes.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2075,13 +2082,13 @@
        "[5 rows x 607 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1_indexed = df1.set_index('sample')\n",
+    "df1_indexed = df1.set_index('sample') # set index for both dataframes\n",
     "df2_indexed = df2.set_index('sample')\n",
     "\n",
     "result = pd.concat([df1_indexed, df2_indexed], axis=1, sort=True)\n",
@@ -2090,7 +2097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2099,7 +2106,7 @@
        "(12580, 607)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
