--- a/Capstone_Wrangling.ipynb
+++ b/Capstone_Wrangling.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Analysis of TCGA dataset \n",
     "# Data taken from patient samples of tumor and normal cells\n",
-    "## The cancer type under investigation is clear cell renal carcinoma (kidney cancer)"
+    "### The cancer type used for this analysis is clear cell renal carcinoma."
    ]
   },
   {
@@ -29,6 +29,16 @@
     "import os\n",
     "import numpy as np\n",
     "print(\"Current working directory\" , os.getcwd()) # print out current working directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The dataset is too large to commit to Github; however, it can be found at:\n",
+    "# https://tcga.xenahubs.net/download/TCGA.KIRC.sampleMap/HiSeqV2.gz"
    ]
   },
   {
